testsuite/tests/properties/invalid_block_expr/extra_expr.lkt
import common

class Example: FooNode {
    @exported fun p(): Bool = {
        val _ = 1;
        false
        val _ = 2;
        true
    }
}
